Run the pre-commit checks (as a failsafe)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  check-for-secrets:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,3 +15,14 @@ jobs:
 
       - name: Hello world
         run: echo Hello, world!
+
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Install Python dependencies
+        run: pip install -r requirements_dev.txt
+
+      - name: Run the pre-commit checks (as a failsafe)
+        run: pre-commit run --all-files
