--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.cache/pre-commit
-          key: pre-commit-cache-${{github.sha}}
+          key: pre-commit-cache-${{ hashFiles('.pre-commit-config.yaml') }}
 
       - name: Install Python dependencies
         run: pip install -r requirements_dev.txt
