--- a/tfenv/cloudbuild.yaml
+++ b/tfenv/cloudbuild.yaml
@@ -1,3 +1,6 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '--tag', 'gcr.io/sre-docker-registry/webops-sre-tooling/tfenv:${COMMIT_SHA}', './tfenv']
+    args:
+      - 'build',
+      - '--tag gcr.io/sre-docker-registry/webops-sre-tooling/tfenv:${COMMIT_SHA}',
+      - './tfenv'
