--- a/tfenv/cloudbuild.yaml
+++ b/tfenv/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '--tag', 'gcr.io/sre-docker-registry/webops-sre-tooling/tfenv:${COMMIT_SHA}', './tfenv']
-    images: ['gcr.io/sre-docker-registry/webops-sre-tooling/tfenv']
+
+images:
+  - 'gcr.io/sre-docker-registry/webops-sre-tooling/tfenv:${COMMIT_SHA}'
