--- a/gitlab-ci/terraform-quality-checks/gitlab-ci.yml
+++ b/gitlab-ci/terraform-quality-checks/gitlab-ci.yml
@@ -12,8 +12,8 @@ variables:
     - terraform --version
     # Use Folded Style (https://yaml.org/spec/1.2-old/spec.html#id2796251) to stop the colons messing things up.
     - >
-      if ! grep -q "\"terraform_version\": \"$(cat ../../.terraform-version)\"" terraform.tfstate;
-        then echo 'ERROR: Terraform versions in .terraform-version and terraform.tfstate must match' && exit 1;
+      if ! grep -q "\"terraform_version\": \"$(cat ../../.terraform-version)\"" terraform.tfstate; then
+        echo 'ERROR: Terraform versions in .terraform-version and terraform.tfstate must match' && exit 1;
       fi
     - terraform init
     - terraform validate
@@ -30,8 +30,8 @@ check_dot_terraform_version_file:
   script:
     # Use Folded Style (https://yaml.org/spec/1.2-old/spec.html#id2796251) to stop the colons messing things up.
     - >
-      if [ ! -f .terraform-version ] || [ ! -s .terraform-version ];
-        then echo 'ERROR:: Project must have a .terraform-version file with a version' && exit 1;
+      if [ ! -f .terraform-version ] || [ ! -s .terraform-version ]; then
+        echo 'ERROR:: Project must have a .terraform-version file with a version' && exit 1;
       fi
     - echo "Project Terraform version is $(cat .terraform-version)"
 
@@ -50,8 +50,8 @@ prevent_unchecked_dev_files:
   stage: terraform_quality_checks
   script:
     - >
-      if [ -d env/dev ];
-        then echo 'ERROR:: Project have env/dev, you must set not HAS_DEV_TERRAFORM to "false"' && exit 1;
+      if [ -d env/dev ]; then
+        echo 'ERROR:: Project has env/dev, you must set not HAS_DEV_TERRAFORM to "false"' && exit 1;
       fi
   rules:
     - if: $HAS_DEV_TERRAFORM == "false"
@@ -103,8 +103,8 @@ checkov_test:
     # Working with a baseline https://bridgecrew.io/blog/checkov-prioritize-new-misconfigurations-infrastructure-as-code/
     - checkov --version
     - >
-      if [ ! -f .checkov.baseline ];
-        then echo "{}" > .checkov.baseline
+      if [ ! -f .checkov.baseline ]; then
+        echo "{}" > .checkov.baseline
       fi
     - checkov --output cli --quiet --directory . --baseline .checkov.baseline
 
