Add HAS_PROD_TERRAFORM switch

--- a/gitlab-ci/terraform-quality-checks/gitlab-ci.yml
+++ b/gitlab-ci/terraform-quality-checks/gitlab-ci.yml
@@ -1,5 +1,6 @@
 variables:
   HAS_DEV_TERRAFORM: 'true'
+  HAS_PROD_TERRAFORM: 'true'
 
 .terraform_validate: &terraform_validate
   image:
@@ -19,7 +20,7 @@ variables:
     - terraform validate
   rules:
     - if: $ENV == "dev" && $HAS_DEV_TERRAFORM != "false"
-    - if: $ENV == "prod"
+    - if: $ENV == "prod" && $HAS_PROD_TERRAFORM != "false"
 
 .terraform_project_version: &terraform_project_version
     # Set TFENV_TERRAFORM_VERSION to empty string so the version in .terraform-version is used
@@ -55,6 +56,7 @@ tflint:
     - tflint --version
     - tflint --recursive
 
+# Todo...
 prevent_unchecked_dev_files:
   stage: terraform_quality_checks
   script:
