--- a/gitlab-ci/terraform-quality-checks/gitlab-ci.yml
+++ b/gitlab-ci/terraform-quality-checks/gitlab-ci.yml
@@ -1,5 +1,6 @@
 variables:
   HAS_DEV_TERRAFORM: 'true'
+  HAS_PROD_TERRAFORM: 'true'
 
 .terraform_validate: &terraform_validate
   image:
@@ -19,11 +20,22 @@ variables:
     - terraform validate
   rules:
     - if: $ENV == "dev" && $HAS_DEV_TERRAFORM != "false"
-    - if: $ENV == "prod"
+    - if: $ENV == "prod" && $HAS_PROD_TERRAFORM != "false"
+
+.prevent_unchecked_files: &prevent_unchecked_files
+  script:
+    # Use Folded Style (https://yaml.org/spec/1.2-old/spec.html#id2796251) to stop the colons messing things up.
+    - >
+      if [ -d env/$ENV ]; then
+        echo "ERROR: Project has env/$ENV, you must set not HAS_$(echo ${ENV} | tr a-z A-Z)_TERRAFORM to \"false\"" && exit 1;
+      fi
+  rules:
+    - if: $ENV == "dev" && $HAS_DEV_TERRAFORM == "false"
+    - if: $ENV == "prod" && $HAS_PROD_TERRAFORM == "false"
 
 .terraform_project_version: &terraform_project_version
-    # Set TFENV_TERRAFORM_VERSION to empty string so the version in .terraform-version is used
-    TFENV_TERRAFORM_VERSION: ""
+  # Set TFENV_TERRAFORM_VERSION to empty string so the version in .terraform-version is used
+  TFENV_TERRAFORM_VERSION: ""
 
 check_dot_terraform_version_file:
   stage: terraform_quality_checks
@@ -57,14 +69,15 @@ tflint:
 
 prevent_unchecked_dev_files:
   stage: terraform_quality_checks
-  script:
-    # Use Folded Style (https://yaml.org/spec/1.2-old/spec.html#id2796251) to stop the colons messing things up.
-    - >
-      if [ -d env/dev ]; then
-        echo 'ERROR: Project has env/dev, you must set not HAS_DEV_TERRAFORM to "false"' && exit 1;
-      fi
-  rules:
-    - if: $HAS_DEV_TERRAFORM == "false"
+  variables:
+    ENV: "dev"
+  <<: *prevent_unchecked_files
+
+prevent_unchecked_prod_files:
+  stage: terraform_quality_checks
+  variables:
+    ENV: "prod"
+  <<: *prevent_unchecked_files
 
 terraform_validate_dev_project_version:
   stage: terraform_quality_checks
