--- a/gitlab-ci/terraform-quality-checks/gitlab-ci.yml
+++ b/gitlab-ci/terraform-quality-checks/gitlab-ci.yml
@@ -122,7 +122,7 @@ checkov_test:
       if [ ! -f .checkov.baseline ]; then
         echo "{}" > .checkov.baseline
       fi
-    - checkov --output cli --quiet --directory . --baseline .checkov.baseline
+    - checkov --output cli --quiet --directory . --baseline .checkov.baseline --skip-check CKV_TF_1
 
 stages:
   - terraform_quality_checks
