--- a/gitlab-ci/terraform-quality-checks/gitlab-ci.yml
+++ b/gitlab-ci/terraform-quality-checks/gitlab-ci.yml
@@ -65,7 +65,7 @@ tflint:
   script:
     - tflint --init
     - tflint --version
-    - tflint --recursive
+    - tflint --recursive --disable-rule terraform_module_pinned_source
 
 prevent_unchecked_dev_files:
   stage: terraform_quality_checks
